<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Translator">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/toolbar"
        android:ems="10"
        android:hint="@string/first_hint"
        android:importantForAutofill="no"

        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="200dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextMultiLine"
        android:layout_centerHorizontal="true"
        android:textOff = "@string/toggleOff"
        android:textOn = "@string/toggleOn"
        android:background="@drawable/toggle_button"
        android:fontFamily="casual"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text = "@string/toggleText" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextMultiLine"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/russia_flag48"
        android:contentDescription="@string/language_button"/>

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/toggleButton"
        android:cursorVisible="false"
        android:digits=""
        android:ems="10"
        android:focusable="false"
        android:gravity="start|top"
        android:hint="@string/second_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:longClickable="false" />

    <LinearLayout

        android:id="@+id/fr_bottom"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

    </LinearLayout>

</RelativeLayout>